[package]
name = "dh-p2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
base64 = "0.21.5"
chrono = "0.4.31"
clap = { version = "4.4.11", features = ["derive"] }
rand = "0.8.5"
sha1 = "0.10.6"
tokio = { version = "1", features = ["full"] }
xml-rs = "0.8.19"
